bk_ida/gccida/c1/computing_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/computing_insn/src/gcse.c:3785:20: error: use of undeclared identifier 'uid_cuid_1'
if ( *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint) >= *( ( _DWORD *)uid_cuid_1 + rtint) ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/computing_insn/src/gcse.c:3785:70: error: use of undeclared identifier 'uid_cuid_1'
if ( *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint) >= *( ( _DWORD *)uid_cuid_1 + rtint) ) 
                                                                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/computing_insn/src/obj/gcse.o] Error 1
